<resources>
    <string name="tab_play">Play</string>
    <string name="tab_add">Add</string>
    <string name="tab_radio">Radio</string>
    <string name="tab_premium">Premium</string>

    <string name="page_title_premium">Premium</string>
    <string name="page_title_import">Import</string>
    <string name="page_title_about">About</string>

    <string name="premium_trial">7 day trial</string>
    <string name="premium_benefits_title">Premium Benefits</string>

    <string name="premium_benefits_list">
        <li>Custom playlists</li>\n
        <li>Control playback speed</li>\n
        <li>Set start/end times</li>\n
        <li>Set skip forward/back seconds</li>\n
        <li>Updated podcast search</li>\n
        <li>Support ongoing development</li>\n
        <li>More…</li>
    </string>

    <string name="premium_playlist">Purchase premium to unlock playlists</string>

    <string name="notification_channel_sync_service">Sync Service</string>

    <string name="validation_invalid_url">Enter a valid url</string>
    <string name="validation_empty_url">Enter a RSS url</string>

    <string name="copyright">Copyright © %s</string>
    <string name="version">Version: %s</string>

    <string name="tutorial_send_podcasts">Send podcasts to your watch here</string>
    <string name="tutorial_unlock_premium">Unlock premium settings here</string>
    <string name="tutorial_import">Import podcasts here</string>
    <string name="tutorial_settings">Unlock premium settings and import podcasts here</string>

    <string name="alert_users_add_fetching_feed">Fetching RSS feed…</string>

    <string name="share_subject">Checkout Wear Casts</string>
    <string name="share_body">Wear Casts is a standalone podcast player for WearOS.  Listen to your podcasts on your WearOS watch without your phone.\n\n%s</string>

    <string name="tip_1">Accept permissions on your wear device before importing podcasts.</string>
    <string name="tip_2">Tip: Use Android\'s Share functionality to send RSS urls to this app.</string>

    <string name="upload_file_summary_unlocked">Sending files will create an auto-playlist on your Wear device (&lt;20 MB recommended).</string>
    <string name="upload_file_summary_locked">PREMIUM: Sending files will create an auto-playlist on your Wear device (&lt;20 MB recommended).</string>

    <string name="error_no_episode">The URL you entered did not return any podcasts.\nClick here to verify it is a valid RSS feed</string>

    <string name="form_add_hint_podcast_title">Podcast title (optional)</string>
    <string name="form_add_hint_podcast_url">Podcast RSS url</string>

    <string name="button_text_import_podcast">Send To Watch</string>
    <string name="button_text_import_opml">Import OPML</string>
    <string name="button_text_upload_file">Send file</string>
    <string name="button_text_no_device">No Wear Device Found</string>
    <string name="button_text_searching_device">Looking For Wear Device…</string>
    <string name="button_text_unlock_premium">Unlock\nPremium Features</string>
    <string name="button_text_resync_premium">Resync\nPremium Features</string>
    <string name="button_text_resync_premium_waiting">Waiting for response…</string>

    <string name="button_text_playlists_readd">Re-add\n%d Playlists</string>
    <string name="button_text_playlists_purchase">Add\nPlaylists</string>
    <string name="alert_playlists_purchased">Playlists created successfully.\n\nManage playlists under the settings on your watch. Restarting the app on your watch may be required.</string>
    <string name="alert_purchased_rating">Would you like to take a second to leave a review or rating?</string>
    <string name="alert_premium_purchased">Premium settings have been unlocked on your watch.</string>
    <string name="alert_premium_purchased_review"><u><b>Please take a second a leave a rating or review by clicking here</b></u></string>

    <string name="menu_text_import">Import</string>
    <string name="menu_text_premium">Premium</string>
    <string name="menu_text_share">Share</string>
    <string name="menu_text_tutorial">Tutorial</string>
    <string name="menu_text_about">About</string>
    <string name="menu_text_directory">Discover</string>

    <string name="page_title_search_results">Results</string>
    <string name="text_no_search_results">No results found</string>

    <string name="text_third_party_greeting">\"%2$s\" has been sent to your watch and will be visible under the %1$s playlist.</string>
    <string name="text_third_party_auto_download">Auto-download podcast episode on watch (applies to next added)</string>
    <string name="text_third_party_no_watch">No watch detected</string>

    <string name="notification_channel_opml_import_complete">OPML Import</string>
    <string name="notification_opml_import_complete_title">OPML import complete</string>

    <string name="text_importing_opml_sent">Your OPML file is being processed in the background and you will be notified when the import is complete.</string>
    <string name="text_importing_opml_start">\n\nParsing OPML…</string>
    <string name="text_importing_opml_parsing">\n\nParsing: %s</string>
    <string name="text_importing_opml_episodes">\n\nSyncing episodes: %s</string>
    <string name="text_importing_opml_art">\n\nDownloading art: %s</string>
    <string name="text_importing_opml_complete">Import complete</string>

    <string name="text_importing_opml_sending">Sending podcasts to your wear device…</string>
    <string name="alert_get_directory_error">Failed to fetch podcasts directory</string>

    <string name="alert_podcast_added">Sent to watch</string>
    <string name="alert_episode_added">Sent to download playlist on watch</string>
    <string name="alert_episode_import_first">This episode will be sent to your watch and downloaded</string>
    <string name="alert_playlist_purchased">%d created.</string>
    <string name="text_file_uploaded">Sent successfully.\nSwipe left on the main screen.</string>
    <string name="text_file_uploaded_timeout">An error occurred with uploading.  The file may be too large.  It may be necessary to upload the file manually to this directory on your watch: /sdcard/WearCasts/Local/</string>
    <string name="text_file_upload_ini">Waiting for response from watch…</string>
    <string name="text_file_upload_start">Sending file…</string>
    <string name="alert_playlists_quantity_none">Select a quantity</string>
    <string name="alert_playlists_purchase_disclaimer">Adding playlists will delete any playlists currently on your watch.</string>
    <string name="alert_playlists_readd_disclaimer">Re-adding playlists will delete any playlists currently on your watch.</string>
    <string name="alert_purchased">You have already purchased this.</string>

    <string name="plurals_single_podcast_added">podcast imported successfully</string>
    <string name="plurals_multiple_podcasts_added">%d podcasts imported successfully</string>

    <string name="confirm_import_opml">If you haven\'t already, accept permissions on your wear device.</string>

    <string name="error_opml_import">There was an error importing your OPML.  Double check it is in the correct format.</string>

</resources>
