<?xml version="1.0" encoding="utf-8"?>
<menu
    android:id="@+id/menu_directory"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/search_directory"
        android:title="@string/search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/menu_directory_premium"
        android:title="@string/menu_text_premium"
        android:icon="@drawable/ic_action_premium"
        app:showAsAction="always"
        />

    <item android:id="@+id/menu_directory_import"
        android:title="@string/menu_text_import"
        android:icon="@drawable/ic_action_import"
        app:showAsAction="never"
        />

    <item android:id="@+id/menu_share"
        android:title="@string/menu_text_share"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="never"
        />

    <item android:id="@+id/menu_tutorial"
        android:title="@string/menu_text_tutorial"
        android:icon="@drawable/ic_action_tutorial"
        app:showAsAction="never"
        />

    <item android:id="@+id/menu_about"
        android:title="@string/menu_text_about"
        />

</menu>