<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/premium_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_marginBottom="25dp">

            <Button
                android:id="@+id/btn_unlock_premium"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_text_unlock_premium" />

            <TextView
                android:id="@+id/premium_trial"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/premium_trial"
                android:textSize="15sp"
                android:textStyle="italic" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_playlists_readd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_playlists_readd"
            android:layout_marginBottom="60dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:visibility="invisible"
            style="@style/Button"
            />

        <Spinner
            android:id="@+id/playlist_buy_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/inapp_playlists_sku"
            android:layout_below="@+id/premium_button_layout"
           />

        <Button
            android:id="@+id/btn_playlist_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_playlists_purchase"
            android:layout_marginBottom="30dp"
            android:layout_below="@+id/premium_button_layout"
            android:layout_toEndOf="@+id/playlist_buy_qty"
            style="@style/Button"
            />

        <TextView
            android:id="@+id/btn_playlist_premium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/playlist_buy_qty"
            android:textSize="14sp"
            android:text="@string/premium_playlist"
            android:layout_marginTop="30dp"
            />

        <Button
            android:id="@+id/btn_upload_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:layout_centerHorizontal="true"
            android:text="@string/button_text_upload_file"
            android:layout_below="@+id/btn_playlist_buy"
            android:enabled="false"
            style="@style/Button"
            />

        <TextView
            android:id="@+id/upload_file_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_upload_file"
            android:textSize="15sp"
            android:text="@string/upload_file_summary_locked"
            android:layout_marginTop="15dp"
            />

         <ProgressBar
            android:id="@+id/upload_file_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
             android:layout_centerHorizontal="true"
             android:visibility="gone"
            android:paddingTop="15dp"
            android:layout_below="@+id/upload_file_summary"
            style="@android:style/Widget.Material.ProgressBar.Horizontal"
            />

        <TextView
            android:id="@+id/premium_benefits_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/upload_file_progress"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:text="@string/premium_benefits_title"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/premium_benefits_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/premium_benefits_title"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:text="@string/premium_benefits_list"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>