<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/podcast_list_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

        <EditText
            android:id="@+id/tv_import_podcast_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/form_add_hint_podcast_title"
            />

        <EditText
            android:id="@+id/tv_import_podcast_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/form_add_hint_podcast_url"
            />

        <Button
            android:id="@+id/btn_import_podcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/button_text_searching_device"
            android:enabled="false"
            android:layout_gravity="center_horizontal"
            style="@style/Button"
            />

        <TextView
            android:id="@+id/main_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:linksClickable="true"
            />

        <Button
            android:id="@+id/btn_import_opml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_searching_device"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:enabled="false"
            style="@style/Button"
            />

        <ProgressBar
            android:id="@+id/user_add_third_party_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            android:paddingTop="30dp"
            android:layout_gravity="center_horizontal"
            style="@android:style/Widget.Material.ProgressBar.Large"
            />

        <RelativeLayout
            android:id="@+id/user_add_third_party_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="20dp"
            android:visibility="gone">

                <ImageView
                    android:id="@+id/user_add_third_party_logo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:paddingEnd="5dp"
                    android:scaleType="fitCenter"
                    />

                <TextView
                    android:id="@+id/user_add_third_party_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_toEndOf="@+id/user_add_third_party_logo"
                    />
                <CheckBox
                    android:id="@+id/user_add_third_party_auto_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="15sp"
                    android:paddingTop="15dp"
                    android:text="@string/text_third_party_auto_download"
                    android:layout_below="@+id/user_add_third_party_message"
                    />
        </RelativeLayout>

        <TextView
            android:id="@+id/import_opml_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textSize="14sp"
            android:paddingTop="30dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            />

        <ProgressBar
            android:id="@+id/import_opml_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            android:paddingTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            style="@android:style/Widget.Material.ProgressBar.Horizontal"
            />
</LinearLayout>
