<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/podcast_list_layout"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:padding="10dp"
    android:orientation="vertical">

        <EditText
            android:id="@+id/tv_import_podcast_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/form_add_hint_podcast_title"
            />

        <EditText
            android:id="@+id/tv_import_podcast_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/form_add_hint_podcast_url"
            />

        <Button
            android:id="@+id/btn_import_podcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/button_text_searching_device"
            android:enabled="false"
            android:layout_gravity="center_horizontal"
            style="@style/Button"
            />

        <TextView
            android:id="@+id/main_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:linksClickable="true"
            />

        <Button
            android:id="@+id/btn_import_opml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_searching_device"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:enabled="false"
            style="@style/Button"
            />

        <TextView
            android:id="@+id/user_add_third_party_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:visibility="gone"
            android:textColor="@color/wc_general_green"
            android:textSize="16sp"
            />

        <CheckBox
            android:id="@+id/user_add_third_party_auto_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:textSize="14sp"
            android:text="Auto-download podcast on watch"
            />

        <TextView
            android:id="@+id/import_opml_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textSize="14sp"
            android:paddingTop="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            />

        <ProgressBar
            android:id="@+id/import_opml_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            android:paddingTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            style="@android:style/Widget.Material.ProgressBar.Horizontal"
            />
</LinearLayout>
